# loguru-rich-sink

./: .gitignore  CHANGELOG  README.md  pyproject.toml
src/loguru_rich_sink/: __init__.py  __main__.py  sink.py
