[project]
name = "loguru-rich-sink"
version = "0.0.3.a"
description = "A loguru sink that uses rich to format log messages."
authors = [
    { name = "Max Ludden", email = "dev@maxludden.com" }
]
dependencies = [
    "rich>=13.8.1",
    "mypy>=1.11.2",
    "rich-gradient>=0.1.7",
    "snoop>=0.6.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[project.scripts]
"loguru-rich-sink" = "loguru_rich_sink:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/loguru_rich_sink"]

[tool.mypy]
ignore_missing_imports = true
